hphp/hack/test/typecheck/using/test_undefined.php.exp
File "test_undefined.php", line 3, characters 15-15:
Unbound name: C (Naming[2049])
